--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,79 @@
 @import 'partials/reset';
-$primary_color: blue;
+
+$primary_color: #4B88A2;
+$secondary_color: #BB0A21;
+$thirdinary_color: #6B9080;
+$off_white: #FFF9FB;
+$off_black: #020F0F;
+
+$primary_font: 'Raleway', sans-serif;
+$title_font: 'Open Sans', sans-serif;
 
 section {
-  height: 800px;
+  height:800px;
 }
 
-i {
-  font-size: 100px;
+nav {
+  height: 80px;
+  padding: 0 50px;
+  background-color: $primary_color;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+
+  ul a:hover {
+    background-color: $primary_color;
+    text-decoration: underline;
+  }
+
+  h3 {
+    font-size: 25px;
+  }
+}
+
+body {
+  font-family: $primary_font;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: $title_font;
+  }
+}
+
+header {
+  height: 80vh;
+  margin-top: 80px;
+  background-image: url('images/background.jpg');
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $off_white;
+  text-align: center;
+
+  h1 {
+    font-size: 300%;
+    margin: 10px 0;
+    text-shadow: 2px 2px 3px $off_black;
+  }
+
+  h3 {
+    font-size: 200%;
+    text-shadow: 2px 2px 3px $off_black;
+  }
+}
+
+#technologies {
+  i {
+    font-size: 100px;
+  }
+  .col {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
