--- a/style.css
+++ b/style.css
@@ -45,30 +45,38 @@ section {
   height: 800px; }
 
 nav {
-  height: 80px;
+  height: 70px;
   padding: 0 50px;
-  background-color: #4B88A2;
+  background-color: rgba(216, 237, 242, 0.1);
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: fixed;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 10000; }
+  nav ul a {
+    color: #FFF9FB;
+    transition: all 0.5s ease; }
   nav ul a:hover {
-    background-color: #4B88A2;
-    text-decoration: underline; }
+    background: none;
+    color: #ff1d79; }
   nav h3 {
+    color: #FFF9FB;
     font-size: 25px; }
 
 body {
-  font-family: "Raleway", sans-serif; }
+  font-family: "Raleway", sans-serif;
+  background-color: #0c3721; }
   body h1, body h2, body h3, body h4, body h5, body h6 {
     font-family: "Open Sans", sans-serif; }
 
 header {
-  height: 80vh;
-  margin-top: 80px;
-  background-image: url("images/background.jpg");
+  height: 95vh;
+  margin-top: 70px;
+  background-image: url("images/theme.jpeg");
+  background-position: center;
+  background-repeat: repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -78,7 +86,7 @@ header {
   text-align: center; }
   header h1 {
     font-size: 300%;
-    margin: 10px 0;
+    margin-left: 65%;
     text-shadow: 2px 2px 3px #020F0F; }
   header h3 {
     font-size: 200%;
