--- a/main.scss
+++ b/main.scss
@@ -51,7 +51,7 @@ body {
 }
 
 header {
-  height: 95vh;
+  height: 100vh;
   margin-top: 70px;
   background-image: url('images/theme.jpeg');
   background-position: center;
@@ -77,12 +77,45 @@ header {
 }
 
 #technologies {
+  padding-top: 100px;
+  font-size: 35px;
+  color: white;
+
+  div {
+    padding-top: 25px;
+  }
   i {
     font-size: 100px;
+    padding: 15px;
+  }
+
+
+  h3 {
+    position: absolute;
+    visibility: hidden;
+    color: white;
+    font-size: 20px;
+    text-shadow: 2px 2px black;
+  }
+
+  div > div:hover h3 {
+    visibility: visible;
   }
   .col {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+
+}
+
+#about {
+  padding-top: 100px;
+  font-size: 35px;
+  color: white;
+
+  p {
+    
   }
 }
