--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     font-family: "Open Sans", sans-serif; }
 
 header {
-  height: 95vh;
+  height: 100vh;
   margin-top: 70px;
   background-image: url("images/theme.jpeg");
   background-position: center;
@@ -92,11 +92,31 @@ header {
     font-size: 200%;
     text-shadow: 2px 2px 3px #020F0F; }
 
-#technologies i {
-  font-size: 100px; }
-#technologies .col {
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+#technologies {
+  padding-top: 100px;
+  font-size: 35px;
+  color: white; }
+  #technologies div {
+    padding-top: 25px; }
+  #technologies i {
+    font-size: 100px;
+    padding: 15px; }
+  #technologies h3 {
+    position: absolute;
+    visibility: hidden;
+    color: white;
+    font-size: 20px;
+    text-shadow: 2px 2px black; }
+  #technologies div > div:hover h3 {
+    visibility: visible; }
+  #technologies .col {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+
+#about {
+  padding-top: 100px;
+  font-size: 35px;
+  color: white; }
 
 /*# sourceMappingURL=style.css.map */
