wrapping up about section

--- a/main.scss
+++ b/main.scss
@@ -114,8 +114,15 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: white;
+  margin-left: 15%;
+
+  h2 {
+    margin-bottom: 50px;
+
+  }
 
   p {
-    
+    font-size: 25px;
+    margin: 15px 50px;
   }
 }
