--- a/style.css
+++ b/style.css
@@ -117,6 +117,12 @@ header {
 #about {
   padding-top: 100px;
   font-size: 35px;
-  color: white; }
+  color: white;
+  margin-left: 15%; }
+  #about h2 {
+    margin-bottom: 50px; }
+  #about p {
+    font-size: 25px;
+    margin: 15px 50px; }
 
 /*# sourceMappingURL=style.css.map */
