--- a/main.scss
+++ b/main.scss
@@ -3,7 +3,8 @@
 $primary_color: rgba(12, 55, 33, 1);
 $secondary_color: rgba(216,237,242, 0.1);
 $tertiary_color: rgba(0, 156, 156, 1);
-$fourth_color: rgba(255, 29, 121, 1);
+$fourth_color: rgba(0, 29, 121, 1); //pink
+$fifth_color:  rgba(0, 58, 17, 1); //lighter green
 $off_white: #FFF9FB;
 $off_black: #020F0F;
 
@@ -83,10 +84,29 @@ header {
 
   div {
     padding-top: 25px;
+    margin-left: 15%;
+  }
+
+  div > div {
+    box-shadow: 2px 2px 2px 2px $off_black;
+    margin: 10px;
+    // background-color: $fifth_color;
   }
   i {
     font-size: 100px;
-    padding: 15px;
+    margin: 20px;
+  }
+
+  div > div:hover {
+
+    box-shadow: 6px 6px 6px 6px $off_black;
+    i {
+      font-size: 105px;
+      margin: 15px;
+    }
+    h3 {
+      visibility: visible;
+    }
   }
 
 
@@ -98,9 +118,7 @@ header {
     text-shadow: 2px 2px black;
   }
 
-  div > div:hover h3 {
-    visibility: visible;
-  }
+
   .col {
     display: flex;
     align-items: center;
@@ -122,7 +140,7 @@ header {
   }
 
   p {
-    font-size: 25px;
+    font-size: 22px;
     margin: 15px 50px;
   }
 }
