--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav {
     transition: all 0.5s ease; }
   nav ul a:hover {
     background: none;
-    color: #ff1d79; }
+    color: #001d79; }
   nav h3 {
     color: #FFF9FB;
     font-size: 25px; }
@@ -97,18 +97,27 @@ header {
   font-size: 35px;
   color: white; }
   #technologies div {
-    padding-top: 25px; }
+    padding-top: 25px;
+    margin-left: 15%; }
+  #technologies div > div {
+    box-shadow: 2px 2px 2px 2px #020F0F;
+    margin: 10px; }
   #technologies i {
     font-size: 100px;
-    padding: 15px; }
+    margin: 20px; }
+  #technologies div > div:hover {
+    box-shadow: 6px 6px 6px 6px #020F0F; }
+    #technologies div > div:hover i {
+      font-size: 105px;
+      margin: 15px; }
+    #technologies div > div:hover h3 {
+      visibility: visible; }
   #technologies h3 {
     position: absolute;
     visibility: hidden;
     color: white;
     font-size: 20px;
     text-shadow: 2px 2px black; }
-  #technologies div > div:hover h3 {
-    visibility: visible; }
   #technologies .col {
     display: flex;
     align-items: center;
@@ -122,7 +131,7 @@ header {
   #about h2 {
     margin-bottom: 50px; }
   #about p {
-    font-size: 25px;
+    font-size: 22px;
     margin: 15px 50px; }
 
 /*# sourceMappingURL=style.css.map */
