--- a/main.scss
+++ b/main.scss
@@ -80,7 +80,7 @@ header {
 #technologies {
   padding-top: 100px;
   font-size: 35px;
-  color: white;
+  color: $off_white;
 
   div {
     padding-top: 25px;
@@ -110,7 +110,7 @@ header {
   h3 {
     position: absolute;
     visibility: hidden;
-    color: white;
+    color: $off_white;
     font-size: 20px;
     text-shadow: 2px 2px black;
   }
@@ -128,7 +128,7 @@ header {
 #about {
   padding-top: 100px;
   font-size: 35px;
-  color: white;
+  color: $off_white;
   margin-left: 15%;
 
   h2 {
@@ -139,5 +139,37 @@ header {
   p {
     font-size: 22px;
     margin: 15px 50px;
+  }
+}
+
+#portfolio {
+  padding-top: 100px;
+  font-size: 35px;
+  color: $off_white;
+
+  margin: 0% 15%;
+  .row {
+    margin-top: 50px;
+  }
+  .card {
+    height: 350px;
+  }
+  .card-image img {
+    height: 175px;
+  }
+
+  .card-content {
+    color: $off_black;
+    font-size: 15px;
+  }
+
+  a {
+    color: $primary_color;
+    font-size: 15px;
+  }
+
+  a:hover {
+    color: $fourth_color;
+    transition: all 0.5s ease;
   }
 }
