--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ header {
 #technologies {
   padding-top: 100px;
   font-size: 35px;
-  color: white; }
+  color: #FFF9FB; }
   #technologies div {
     padding-top: 25px;
     margin-left: 15%; }
@@ -113,7 +113,7 @@ header {
   #technologies h3 {
     position: absolute;
     visibility: hidden;
-    color: white;
+    color: #FFF9FB;
     font-size: 20px;
     text-shadow: 2px 2px black; }
   #technologies .col {
@@ -124,12 +124,33 @@ header {
 #about {
   padding-top: 100px;
   font-size: 35px;
-  color: white;
+  color: #FFF9FB;
   margin-left: 15%; }
   #about h2 {
     margin-bottom: 50px; }
   #about p {
     font-size: 22px;
     margin: 15px 50px; }
+
+#portfolio {
+  padding-top: 100px;
+  font-size: 35px;
+  color: #FFF9FB;
+  margin: 0% 15%; }
+  #portfolio .row {
+    margin-top: 50px; }
+  #portfolio .card {
+    height: 350px; }
+  #portfolio .card-image img {
+    height: 175px; }
+  #portfolio .card-content {
+    color: #020F0F;
+    font-size: 15px; }
+  #portfolio a {
+    color: #0c3721;
+    font-size: 15px; }
+  #portfolio a:hover {
+    color: #ff0082;
+    transition: all 0.5s ease; }
 
 /*# sourceMappingURL=style.css.map */
