--- a/style.css
+++ b/style.css
@@ -158,13 +158,14 @@ header {
   #portfolio .card-image img {
     height: 175px; }
   #portfolio .card-content {
-    color: #020F0F;
+    color: #FFF9FB;
+    background: rgba(0, 50, 17, 0.7);
     font-size: 15px; }
   #portfolio a {
-    color: #0c3721;
+    color: #ff0082;
     font-size: 15px; }
   #portfolio a:hover {
-    color: #ff0082;
+    color: #0c3721;
     transition: all 0.5s ease; }
 
 /*# sourceMappingURL=style.css.map */
