ok final change

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav {
   nav .contact:hover .contact-links {
     visibility: visible; }
   nav h3 {
-    color: #FFF9FB;
+    color: #ff0082;
     font-size: 25px; }
 
 body {
