--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 header {
   height: 100vh;
   margin-top: 70px;
-  background-image: url("images/theme.jpeg");
+  background-image: url("images/damn.jpeg");
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
