--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,10 @@
 @import 'partials/reset';
 
-$primary_color: rgba(12, 55, 33, 1); //dark green
-$secondary_color: rgba(216,237,242, 0.1);
-$tertiary_color: rgba(0, 156, 156, 1);
+$primary_color: rgba(0, 26, 73, 1); //dark green
+$secondary_color: rgba(1, 149, 197, 0.1);
+$tertiary_color: rgba(0, 74, 136, 1);
 $fourth_color: rgba(255, 0, 130, 1.0); //pink
-$fifth_color:  rgba(0, 50, 17, 0.7); //lighter green
+$fifth_color:  rgba(0, 26, 73, 0.7); //lighter green
 $off_white: #FFF9FB;
 $off_black: #020F0F;
 
