--- a/main.scss
+++ b/main.scss
@@ -3,8 +3,8 @@
 $primary_color: rgba(0, 26, 73, 1); //dark green
 $secondary_color: rgba(1, 149, 197, 0.1);
 $tertiary_color: rgba(0, 74, 136, 1);
-$fourth_color: rgba(255, 0, 130, 1.0); //pink
-$fifth_color:  rgba(0, 26, 73, 0.7); //lighter green
+$fourth_color: rgba(0, 127, 193, 1.0); //pink
+$fifth_color:  rgba(0, 77, 139, 0.7); //lighter green
 $off_white: #FFF9FB;
 $off_black: #020F0F;
 
@@ -57,7 +57,7 @@ nav {
 
 
   h3 {
-    color: $fourth_color;
+    color: $off_white;
     font-size: 25px;
   }
 }
@@ -87,8 +87,9 @@ header {
 
   h1 {
     font-size: 300%;
-    margin-left: 65%;
-    text-shadow: 2px 2px 3px $off_black;
+    margin-left: 0%;
+    text-shadow: 3px 3px 3px $off_black;
+    margin-bottom: 5%;
   }
 
   h3 {
@@ -110,7 +111,7 @@ header {
   div > div {
     box-shadow: 2px 2px 2px 2px $off_black;
     margin: 10px;
-    background-color: $fifth_color;
+    background-color: $tertiary_color;
   }
   i {
     font-size: 100px;
@@ -120,7 +121,7 @@ header {
   div > div:hover {
 
     box-shadow: 6px 6px 6px 6px $off_black;
-
+    background-color: $fifth_color;
     h3 {
       visibility: visible;
     }
@@ -129,6 +130,7 @@ header {
 
   h3 {
     position: absolute;
+    margin-top: -10px;
     visibility: hidden;
     color: $off_white;
     font-size: 20px;
@@ -146,6 +148,7 @@ header {
 }
 
 #about {
+  height: 600px;
   padding-top: 100px;
   font-size: 35px;
   color: $off_white;
