--- a/style.css
+++ b/style.css
@@ -60,21 +60,21 @@ nav {
     transition: all 0.5s ease; }
   nav ul a:hover {
     background: none;
-    color: #ff0082; }
+    color: #007fc1; }
   nav .contact-links {
     position: absolute;
     margin-top: 26px;
     visibility: hidden;
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 26, 73, 0.7);
+    background-color: rgba(0, 77, 139, 0.7);
     height: 150px; }
     nav .contact-links li {
       margin-top: 15px; }
   nav .contact:hover .contact-links {
     visibility: visible; }
   nav h3 {
-    color: #ff0082;
+    color: #FFF9FB;
     font-size: 25px; }
 
 body {
@@ -98,8 +98,9 @@ header {
   text-align: center; }
   header h1 {
     font-size: 300%;
-    margin-left: 65%;
-    text-shadow: 2px 2px 3px #020F0F; }
+    margin-left: 0%;
+    text-shadow: 3px 3px 3px #020F0F;
+    margin-bottom: 5%; }
   header h3 {
     font-size: 200%;
     text-shadow: 2px 2px 3px #020F0F; }
@@ -114,16 +115,18 @@ header {
   #technologies div > div {
     box-shadow: 2px 2px 2px 2px #020F0F;
     margin: 10px;
-    background-color: rgba(0, 26, 73, 0.7); }
+    background-color: #004a88; }
   #technologies i {
     font-size: 100px;
     margin: 10px 10px 20px 10px; }
   #technologies div > div:hover {
-    box-shadow: 6px 6px 6px 6px #020F0F; }
+    box-shadow: 6px 6px 6px 6px #020F0F;
+    background-color: rgba(0, 77, 139, 0.7); }
     #technologies div > div:hover h3 {
       visibility: visible; }
   #technologies h3 {
     position: absolute;
+    margin-top: -10px;
     visibility: hidden;
     color: #FFF9FB;
     font-size: 20px;
@@ -134,6 +137,7 @@ header {
     justify-content: center; }
 
 #about {
+  height: 600px;
   padding-top: 100px;
   font-size: 35px;
   color: #FFF9FB;
@@ -159,11 +163,11 @@ header {
     height: 175px; }
   #portfolio .card-content {
     color: #FFF9FB;
-    background: rgba(0, 26, 73, 0.7);
+    background: rgba(0, 77, 139, 0.7);
     height: 150px;
     font-size: 15px; }
   #portfolio a {
-    color: #ff0082;
+    color: #007fc1;
     font-size: 15px; }
   #portfolio a:hover {
     color: #001a49;
