basically just working on making my site better

--- a/main.scss
+++ b/main.scss
@@ -168,6 +168,7 @@ header {
     background:  $fifth_color;
     font-size: 22px;
     margin: 15px 160px 15px 10px;
+    border: 10px double $off_white;
   }
 }
 
