--- a/main.scss
+++ b/main.scss
@@ -158,6 +158,7 @@ header {
   font-size: 35px;
   color: $off_white;
   margin-left: 15%;
+  text-shadow: 5px 5px 5px $off_black;
 
   h2 {
     margin-bottom: 50px;
@@ -169,6 +170,7 @@ header {
     font-size: 22px;
     margin: 15px 160px 15px 10px;
     border: 10px double $off_white;
+    padding: 20px 10px;
   }
 }
 
@@ -185,6 +187,10 @@ header {
     height: 350px;
     margin: 25px 0px;
     width: 100%;
+  }
+
+  .card:hover {
+    opacity: 0.5;
   }
   .card-image img {
     height: 175px;
