--- a/main.scss
+++ b/main.scss
@@ -30,11 +30,16 @@ nav {
 
   ul a{
     color: $off_white;
+    font-size: 17px;
     transition: all 0.5s ease;
   }
   ul a:hover {
     background: none;
     color: $fourth_color;
+    -webkit-transform: scale(1.15);
+    -moz-transform: scale(1.15);
+    -o-transform: scale(1.15);
+    -ms-transform: scale(1.15);
   }
 
   .contact {
@@ -116,9 +121,11 @@ header {
   }
 
   div > div {
-    box-shadow: 2px 2px 2px 2px $off_black;
-    margin: 10px;
+    box-shadow: 0px 0px 10px 2px $off_white;
+    margin: 15px;
     background-color: $tertiary_color;
+    border-radius: 10px;
+    transition: all 0.9s ease;
   }
   i {
     font-size: 100px;
@@ -126,7 +133,10 @@ header {
   }
 
   div > div:hover {
-
+    -webkit-transform: scale(1.11);
+    -moz-transform: scale(1.11);
+    -o-transform: scale(1.11);
+    -ms-transform: scale(1.11);
     box-shadow: 6px 6px 6px 6px $off_black;
     background-color: $fifth_color;
     h3 {
@@ -189,10 +199,16 @@ header {
     height: 350px;
     margin: 25px 0px;
     width: 100%;
+    transition: all 0.5s ease;
   }
 
   .card:hover {
-    opacity: 0.5;
+    opacity: 0.8;
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+
   }
   .card-image img {
     height: 175px;
