--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,8 @@ section {
 nav {
   height: 70px;
   padding: 0 50px;
-  background-color: $secondary_color;
+  background: linear-gradient($off_black, $secondary_color);
+
   display: flex;
   align-items: center;
   font-variant: small-caps;
@@ -121,7 +122,10 @@ header {
     }
 
     img:hover {
-      
+      -webkit-transform: scale(1.21);
+      -moz-transform: scale(1.21);
+      -o-transform: scale(1.21);
+      -ms-transform: scale(1.21);
     }
 
   }
@@ -151,6 +155,7 @@ header {
   div > div {
     box-shadow: 0px 0px 10px 2px $off_white;
     margin: 15px;
+    min-width: 150px;
     background-color: $tertiary_color;
     border-radius: 10px;
     transition: all 0.9s ease;
@@ -194,7 +199,7 @@ header {
 
 #about {
   height: 600px;
-  padding-top: 100px;
+  padding: 100px 0px;
   font-size: 35px;
   color: $off_white;
   margin-left: 15%;
