--- a/main.scss
+++ b/main.scss
@@ -96,9 +96,17 @@ header {
   align-items: center;
   color: $off_white;
   text-align: center;
+  transition: all 0.5s ease;
 
-  
 
+  .hi {
+    visibility: hidden;
+    transition: visibility 2s linear;
+  }
+
+  .visible {
+    visibility: visible;
+   }
 
   h1 {
     font-size: 300%;
@@ -150,7 +158,8 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: $off_white;
-
+  height: 500px;
+  position: relative;
   div {
     padding-top: 25px;
     margin-left: 15%;
@@ -208,6 +217,7 @@ header {
   color: $off_white;
   margin-left: 15%;
   text-shadow: 5px 5px 5px $off_black;
+  position: relative;
 
   h2 {
     margin-bottom: 50px;
@@ -227,7 +237,7 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: $off_white;
-
+  padding-bottom: 100px;
   margin: 0% 15%;
   .row {
     margin-top: 50px;
