--- a/style.css
+++ b/style.css
@@ -104,7 +104,13 @@ header {
   justify-content: center;
   align-items: center;
   color: #FFF9FB;
-  text-align: center; }
+  text-align: center;
+  transition: all 0.5s ease; }
+  header .hi {
+    visibility: hidden;
+    transition: visibility 2s linear; }
+  header .visible {
+    visibility: visible; }
   header h1 {
     font-size: 300%;
     margin-left: 0%;
@@ -137,7 +143,9 @@ header {
 #technologies {
   padding-top: 100px;
   font-size: 35px;
-  color: #FFF9FB; }
+  color: #FFF9FB;
+  height: 500px;
+  position: relative; }
   #technologies div {
     padding-top: 25px;
     margin-left: 15%; }
@@ -178,7 +186,8 @@ header {
   font-size: 35px;
   color: #FFF9FB;
   margin-left: 15%;
-  text-shadow: 5px 5px 5px #020F0F; }
+  text-shadow: 5px 5px 5px #020F0F;
+  position: relative; }
   #about h2 {
     margin-bottom: 50px; }
   #about p {
@@ -192,6 +201,7 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: #FFF9FB;
+  padding-bottom: 100px;
   margin: 0% 15%; }
   #portfolio .row {
     margin-top: 50px; }
