--- a/style.css
+++ b/style.css
@@ -143,9 +143,7 @@ header {
 #technologies {
   padding-top: 100px;
   font-size: 35px;
-  color: #FFF9FB;
-  height: 500px;
-  position: relative; }
+  color: #FFF9FB; }
   #technologies div {
     padding-top: 25px;
     margin-left: 15%; }
@@ -186,8 +184,7 @@ header {
   font-size: 35px;
   color: #FFF9FB;
   margin-left: 15%;
-  text-shadow: 5px 5px 5px #020F0F;
-  position: relative; }
+  text-shadow: 5px 5px 5px #020F0F; }
   #about h2 {
     margin-bottom: 50px; }
   #about p {
@@ -201,7 +198,6 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: #FFF9FB;
-  padding-bottom: 100px;
   margin: 0% 15%; }
   #portfolio .row {
     margin-top: 50px; }
