--- a/style.css
+++ b/style.css
@@ -147,6 +147,8 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: #FFF9FB; }
+  #technologies h2 {
+    margin-left: 60px; }
   #technologies div {
     padding-top: 25px;
     margin-left: 15%; }
@@ -202,7 +204,8 @@ header {
   padding-top: 100px;
   font-size: 35px;
   color: #FFF9FB;
-  margin: 0% 15%; }
+  margin: 0% 15%;
+  margin-bottom: 50px; }
   #portfolio .row {
     margin-top: 50px; }
   #portfolio .card {
