--- a/main.scss
+++ b/main.scss
@@ -36,6 +36,7 @@ nav {
     color: $off_white;
     font-size: 17px;
     transition: color 0.5s ease;
+    transition: transform 0.5s ease;
   }
   ul a:hover {
     background: none;
@@ -133,11 +134,13 @@ header {
       top: -30%;
 
       transition: top 1.5s linear;
+
       transition-delay: 0.5s;
 
     }
 
     img:hover {
+      transition: transform 0.5s;
       -webkit-transform: scale(1.21);
       -moz-transform: scale(1.21);
       -o-transform: scale(1.21);
